# NN

./: NN.sln  README.md  functions.py  layer.py  main.py  main_func.py  main_iris.py  manager.py  neuron.py  nn.py  pyproject.toml
NN/: Functions.cpp  Functions.h  Layer.cpp  Layer.h  Manager.cpp  Manager.h  Model.cpp  Model.h  NN.cpp  NN.vcxproj  NN.vcxproj.filters  Neuron.cpp  Neuron.h
