[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
